# clawmail

./: .gitignore  README.md  config.example.yaml  justfile  pyproject.toml
src/clawmail/: __init__.py  __main__.py  classifier.py  cli.py  config.py  imap.py  models.py
